--- a/src/themes/root.css
+++ b/src/themes/root.css
@@ -293,5 +293,6 @@
   --sgds-form-icon-size-md: var(--sgds-icon-size-md);
   --sgds-form-icon-size-lg: var(--sgds-icon-size-lg);
 
-  --sgds-form-box-shadow-focus: 0px 0px 0px 4px var(--sgds-blue-300);
+  --sgds-box-shadow-focus: 0px 0px 0px 4px var(--sgds-blue-300);
+  --sgds-form-box-shadow-focus: var(--sgds-box-shadow-focus);
 }
