chore(*): dx plus poc

--- a/cypress/apps/angular-app/src/components/progress/progress.component.html
+++ b/cypress/apps/angular-app/src/components/progress/progress.component.html
@@ -1,5 +1,5 @@
 <sgds-progress>
-    <sgds-progress-bar label="50%" variant="secondary" aria-valuenow="50" aria-minvalue="0" aria-maxvalue="100"
+    <sgds-progress-bar label="50%" value="50" variant="secondary" aria-valuenow="50" aria-minvalue="0" aria-maxvalue="100"
         aria-label="Loading in progress">
     </sgds-progress-bar>
 </sgds-progress>
