--- a/src/components/Radio/radio.css
+++ b/src/components/Radio/radio.css
@@ -1,27 +1,15 @@
-
-:host([checked]) {
-  --sgds-form-bg: var(--sgds-info-filled);
-  --sgds-form-border-color: var(--sgds-form-bg);
-}
-
-:host(:focus-visible) {
-  outline: none;
+:host {
+  outline: 0;
 }
 input {
-  font-family: inherit;
-  font-size: inherit;
-  line-height: inherit;
   margin: 0;
 }
 
 .form-check {
-  display: block;
-  margin-bottom: var(--sgds-spacer-2);
-  min-height: 2rem;
-}
-
-.form-check .form-check-input {
-  margin-right: var(--sgds-form-input-margin-right);
+  display: flex;
+  gap: var(--sgds-form-gap-md);
+  padding: var(--sgds-form-padding-inline-sm) 0px;
+  align-items: center;
 }
 
 .form-check-input {
@@ -30,62 +18,33 @@ input {
   background-image: var(--sgds-radio-bg-image);
   background-position: 50%;
   background-repeat: no-repeat;
-  background-size: contain;
-  border: var(--sgds-form-border-width) solid var(--sgds-border-color);
-  flex-shrink: 0;
-  height: 1.125em;
-  margin-top: 0.4375em;
-  vertical-align: top;
-  width: 1.125em;
-}
-.form-check-input[type="radio"] {
+  background-size: auto;
+  border: var(--sgds-form-border-width-default) solid var(--sgds-form-border-color);
+  width: var(--sgds-form-height-sm);
+  height: var(--sgds-form-height-sm);
   border-radius: 50%;
 }
-.form-check-input:focus {
-  border-color: var(--sgds-form-border-color);
-  box-shadow: var(--sgds-form-focus-box-shadow);
+
+.form-check-input:focus,
+.form-check-input:focus-visible {
+  box-shadow: var(--sgds-form-box-shadow-focus);
   outline: 0;
 }
 .form-check-input:checked,
 .form-check-input[checked] {
-  background-color: var(--sgds-form-bg);
-  border-color: var(--sgds-form-border-color);
+  background-color: var(--sgds-form-primary-bg);
+  --sgds-radio-bg-image: url('data:image/svg+xml,<svg width="8" height="8" viewBox="0 0 8 8" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M0 4C0 1.79086 1.79086 0 4 0C6.20914 0 8 1.79086 8 4C8 6.20914 6.20914 8 4 8C1.79086 8 0 6.20914 0 4Z" fill="white"/></svg>');
 }
 
-.form-check-input:checked[type="radio"],
-.form-check-input[checked][type="radio"] {
-  --sgds-radio-bg-image: url("data:image/svg+xml;charset=utf-8,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'%3E%3Ccircle r='2' fill='%23fff'/%3E%3C/svg%3E");
-}
-
-.form-check-input:disabled {
-  filter: none;
-  opacity: var(--sgds-disabled-opacity);
-  border-color: var(--sgds-form-border-color);
+:host([disabled]) .form-check {
+  opacity: var(--sgds-opacity-50);
   cursor: not-allowed;
 }
 
-.form-check-input.is-invalid,
-.form-check-input:invalid {
-  border-color: var(--sgds-form-invalid-color);
+.form-check-input.is-invalid {
+  border-color: var(--sgds-form-danger-border-color);
 }
-.form-check-input.is-invalid:checked,
-.form-check-input:invalid:checked {
-  background-color: var(--sgds-form-invalid-color);
-}
-.form-check-input.is-invalid:focus,
-.form-check-input:invalid:focus {
-  box-shadow: var(--sgds-form-focus-invalid-box-shadow);
-}
-.form-check-input.is-invalid ~ .form-check-label,
-.form-check-input:invalid ~ .form-check-label {
-  color: var(--sgds-form-invalid-color);
-}
-.form-check-inline {
-  display: inline-block;
-  margin-right: var(--sgds-form-inline-margin-right);
-  margin-bottom: 0;
-}
-
-:host([last-of-type]) .form-check {
-  margin-bottom: 0;
+.form-check-input:checked.is-invalid,
+.form-check-input[checked].is-invalid {
+  background-color: var(--sgds-form-danger-bg);
 }
