--- a/src/components/Radio/radio-group.css
+++ b/src/components/Radio/radio-group.css
@@ -5,9 +5,14 @@ fieldset {
   padding: 0;
   display: flex;
   flex-direction: column;
-  gap: var(--sgds-spacer-2);
+  gap: var(--sgds-form-gap-md);
 }
 
 .radio-group-validation-input {
   display: none;
+}
+.radio-container{
+  display: flex;
+  flex-direction: column;
+  gap: var(--sgds-form-gap-md)
 }
