--- a/src/components/Stepper/stepper.css
+++ b/src/components/Stepper/stepper.css
@@ -1,88 +1,127 @@
-:host {
-  --sgds-stepper-theme-hover-color: var(--sgds-primary-800);
-  --sgds-stepper-detail-font-weight: 700;
-}
-
-.sgds.stepper {
+.stepper {
   display: flex;
   flex-wrap: wrap;
 }
-.sgds.stepper .stepper-item {
+
+.stepper.vertical {
+  flex-direction: column;
+}
+
+.stepper.horizontal .stepper-item-container {
   position: relative;
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: var(--sgds-gap-xs);
   flex-basis: 1em;
   flex-grow: 1;
   flex-shrink: 1;
-  margin-top: 0;
-}
-.sgds.stepper .stepper-item:not(:first-child):before {
-  content: " ";
-  position: absolute;
-}
-.sgds.stepper .stepper-item.is-clickable {
-  cursor: pointer;
-}
-.sgds.stepper .stepper-item.is-clickable:hover .stepper-marker {
-  background-color: var(--stepper-theme-hover-color);
-  border-color: var(--stepper-theme-hover-color);
-}
-.sgds.stepper .stepper-item.is-clickable:hover .stepper-detail,
-.sgds.stepper .stepper-item.is-clickable:hover .stepper-detail > * {
-  color: var(--stepper-theme-hover-color);
-  transition: all 0.5s ease;
-}
-.sgds.stepper .stepper-item:before {
-  background: linear-gradient(270deg, var(--sgds-alternate-bg) 50%, var(--sgds-default-bg-subtle) 0);
-  background-position: 100% 100%;
-  background-size: 200% 100%;
 }
 
-.sgds.stepper .stepper-item.is-active:before {
-  background-position: 0 100%;
+.stepper.vertical .stepper-item-container {
+  position: relative;
+  width: fit-content;
 }
-.sgds.stepper .stepper-item.is-active .stepper-marker {
-  background-color: var(--sgds-primary-bg);
-  font-weight: 700;
-  color:  var(--sgds-default-color-on-dark);
+
+.stepper .stepper-item {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: var(--sgds-gap-sm);
 }
-.sgds.stepper .stepper-item.is-completed:before {
-  background-position: 0 100%;
+
+.stepper.vertical .stepper-item {
+  flex-direction: row;
+  align-items: flex-start;
 }
-.sgds.stepper .stepper-item.is-completed .stepper-marker {
-  background-color: var(--sgds-default-bg);
-  border: var(--sgds-border-width-2) solid var(--sgds-primary-border-color);
-  font-weight: 700;
-  color: var(--sgds-primary-color);
+
+.stepper .stepper-item:focus:not(:focus-visible) {
+  outline: 0;
 }
-.sgds.stepper .stepper-item > .stepper-marker {
+
+.stepper .stepper-item:focus-visible {
+  box-shadow: var(--sgds-box-shadow-focus);
+  outline: 0;
+}
+
+.stepper.horizontal .stepper-item-container:not(:first-child) .stepper-item:before {
+  content: " ";
+  position: absolute;
+  z-index: -1;
+  top: 15px;
+  bottom: 0;
+  left: calc(-50% + 16px);
+  width: calc(100% - var(--sgds-dimension-32));
+  height: var(--sgds-dimension-2);
+  background: var(--sgds-default-bg-translucent);
+}
+
+.stepper.vertical .stepper-item-container:not(:last-child) .stepper-item:after {
+  content: " ";
+  position: absolute;
+  z-index: -1;
+  top: 32px;
+  bottom: 0;
+  left: 15px;
+  width: var(--sgds-dimension-2);
+  height: calc(100% - var(--sgds-dimension-32));
+  background: var(--sgds-default-bg-translucent);
+}
+
+.stepper.horizontal .stepper-item-container .stepper-item.is-active:before,
+.stepper.horizontal .stepper-item-container .stepper-item.is-completed:before,
+.stepper.vertical .stepper-item-container .stepper-item.is-completed:after,
+.stepper.vertical .stepper-item-container .stepper-item.is-completed:after {
+  background: var(--sgds-primary-bg);
+}
+
+.stepper .stepper-item.is-clickable {
+  cursor: pointer;
+}
+
+.stepper .stepper-marker {
   display: flex;
   align-items: center;
   justify-content: center;
-  background: var(--sgds-alternate-bg);
-  border: var(--sgds-border-width-2) solid var(--sgds-border-color-transparent);
+  background: var(--sgds-default-bg-translucent);
+  border: var(--sgds-border-width-2) solid var(--sgds-default-border-color-transparent);
   border-radius: 50%;
-  font-weight: 400;
+  z-index: 1;
   color: var(--sgds-default-color-subtle);
   height: var(--sgds-dimension-32);
   width: var(--sgds-dimension-32);
 }
 
-.sgds.stepper .stepper-item:not(:first-child):before {
-  top: 1rem;
-  bottom: 0;
-  left: calc(-50% + 24px);
-  width: calc(100% - 48px);
-  height: 2px;
-}
-
-.sgds.stepper .stepper-item .stepper-detail {
+.stepper .stepper-detail {
   text-align: center;
   max-width: var(--sgds-dimension-128);
 }
 
-.sgds.stepper .stepper-item.is-active .stepper-detail {
-  font-weight: var(--sgds-font-weight-semibold);
+.stepper.vertical .stepper-detail {
+  text-align: left;
+  padding: var(--sgds-padding-2-xs) 0 var(--sgds-padding-xl);
+}
+
+.stepper .stepper-item:not(.is-active):not(.is-completed) .stepper-detail {
+  color: var(--sgds-default-color-subtle);
+}
+
+.stepper .stepper-item.is-clickable:hover .stepper-marker {
+  background-color: var(--sgds-primary-bg-emphasis);
+  border-color: var(--sgds-default-border-color-transparent);
+  color: var(--sgds-default-color-on-dark);
+}
+
+.stepper .stepper-item.is-clickable .stepper-detail {
+  color: var(--sgds-primary-color-emphasis);
+}
+
+.stepper .stepper-item.is-active .stepper-marker {
+  background-color: var(--sgds-primary-bg);
+  color:  var(--sgds-default-color-on-dark);
+}
+
+.stepper .stepper-item.is-completed .stepper-marker {
+  background-color: var(--sgds-default-bg);
+  border: var(--sgds-border-width-2) solid var(--sgds-primary-border-color);
+  color: var(--sgds-primary-color);
 }
