--- a/src/styles/form-label.css
+++ b/src/styles/form-label.css
@@ -1,7 +1,7 @@
 .form-label {
     font-weight: var(--sgds-form-label-font-weight);
     margin-bottom: 0;
-    color: var(--sgds-form-label-color);
+    color: var(--sgds-form-color);
   }
 
 .form-label.required:after{
@@ -9,10 +9,10 @@
     color: var(--sgds-danger);
 }
 .form-check-label{
-  color: var(--sgds-form-label-color);
+  color: var(--sgds-form-color);
 }
 .form-check-input:disabled ~ .form-check-label,
 .form-check-input[disabled] ~ .form-check-label {
-  opacity: var(--sgds-disabled-opacity);
+  /* opacity: var(--sgds-disabled-opacity); */
   cursor: not-allowed;
 }
