--- a/src/components/Masthead/masthead.css
+++ b/src/components/Masthead/masthead.css
@@ -69,7 +69,6 @@ a {
 .col {
   flex: 1 0 0%;
 }
-/*! CSS Used from: Embedded */
 .container {
   display: flex;
   flex-direction: column;
@@ -80,27 +79,21 @@ a {
   background-color: #f0f0f0;
   font-family: system-ui, -apple-system, "Segoe UI", Roboto, Arial, "Noto Sans", "Liberation Sans", sans-serif;
   color: #252525;
-  @media screen and (max-width: 1023px) {
+}
+@media screen and (max-width: 1023px) {
+  .sgds-masthead {
     font-size: var(--masthead-mobile-font-size);
-    .col,
-    .row {
-      padding-left: 0;
-      padding-right: 0;
-    }
-    .row {
-      margin-right: 0;
-      margin-left: 0;
-    }
-  }
+ }
+  .sgds-masthead .col, .sgds-masthead .row {
+    padding-left: 0;
+    padding-right: 0;
+ }
+  .sgds-masthead .row {
+    margin-right: 0;
+    margin-left: 0;
+ }
 }
 
-.sg-crest {
-  width: 1.25rem;
-  height: 1.75rem;
-  path {
-    fill: #db0000;
-  }
-}
 
 .masthead-layout {
   display: flex;
@@ -116,9 +109,9 @@ a {
   user-select: none;
   transition: transform 0.3s ease-in-out 0s;
   align-self: center;
-  &.show {
-    transform: rotate(0deg);
-  }
+}
+.sgds-masthead-identify-icon.show{
+  transform: rotate(0deg);
 }
 
 .sgds-masthead-button {
@@ -140,82 +133,91 @@ a {
   padding-top: 2.5rem;
   padding-bottom: 3rem;
   display: none;
-  @media screen and (max-width: 1023px) {
+}
+@media screen and (max-width: 1023px) {
+  .sgds-masthead-content {
     padding-top: 1rem;
     padding-bottom: 2rem;
-  }
-  .content-grid {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-    gap: 10rem;
-    @media screen and (max-width: 1023px) {
-      grid-template-columns: 1fr;
-      gap: 1.5rem;
-      .banner-icon-inline {
-        width: 0.6rem;
-        height: 0.6rem;
-        margin-bottom: 0.1875rem;
-      }
-    }
-    .icon {
-      margin-top: -0.1em;
-    }
-  }
-
-  .wrapper {
-    display: flex;
-    gap: 1rem;
-    font-size: 1rem;
-    @media screen and (max-width: 1023px) {
-      font-size: var(--masthead-mobile-font-size);
-      gap: 0.5rem;
-    }
-    .content {
-      .title {
-        font-weight: 600;
-        margin-bottom: 0.5rem;
-        @media screen and (max-width: 1023px) {
-          margin-bottom: 0.25rem;
-        }
-      }
-      article {
-        line-height: 1.5rem;
-        @media screen and (max-width: 1023px) {
-          line-height: 1.2rem;
-        }
-      }
-    }
-    .banner-icon {
-      width: 1.125rem;
-      path {
-        fill: #252525;
-      }
-
-      @media screen and (max-width: 1023px) {
-        width: 0.75rem;
-      }
-      svg {
-        line-height: 1.5rem;
-        @media screen and (max-width: 1023px) {
-          width: 1.25rem;
-        }
-      }
-    }
-    .banner-icon-inline {
-      path {
-        fill: #252525;
-      }
-      @media screen and (max-width: 1023px) {
-        width: 0.6rem;
-        height: 0.6rem;
-        margin-bottom: 0.1875rem;
-      }
-    }
-  }
-
-  &.show {
-    display: block;
-  }
+ }
+}
+.sgds-masthead-content .content-grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  gap: 10rem;
+}
+@media screen and (max-width: 1023px) {
+  .sgds-masthead-content .content-grid {
+    grid-template-columns: 1fr;
+    gap: 1.5rem;
+ }
+  .sgds-masthead-content .content-grid .banner-icon-inline {
+    width: 0.6rem;
+    height: 0.6rem;
+    margin-bottom: 0.1875rem;
+ }
+}
+.sgds-masthead-content .content-grid .icon {
+  margin-top: -0.1em;
+}
+.sgds-masthead-content .wrapper {
+  display: flex;
+  gap: 1rem;
+  font-size: 1rem;
+}
+@media screen and (max-width: 1023px) {
+  .sgds-masthead-content .wrapper {
+    font-size: var(--masthead-mobile-font-size);
+    gap: 0.5rem;
+ }
+}
+.sgds-masthead-content .wrapper .content .title {
+  font-weight: 600;
+  margin-bottom: 0.5rem;
+}
+@media screen and (max-width: 1023px) {
+  .sgds-masthead-content .wrapper .content .title {
+    margin-bottom: 0.25rem;
+ }
+}
+.sgds-masthead-content .wrapper .content article {
+  line-height: 1.5rem;
+}
+@media screen and (max-width: 1023px) {
+  .sgds-masthead-content .wrapper .content article {
+    line-height: 1.2rem;
+ }
+}
+.sgds-masthead-content .wrapper .banner-icon {
+  width: 1.125rem;
+}
+.sgds-masthead-content .wrapper .banner-icon path {
+  fill: #252525;
+}
+@media screen and (max-width: 1023px) {
+  .sgds-masthead-content .wrapper .banner-icon {
+    width: 0.75rem;
+ }
+}
+.sgds-masthead-content .wrapper .banner-icon svg {
+  line-height: 1.5rem;
+}
+@media screen and (max-width: 1023px) {
+  .sgds-masthead-content .wrapper .banner-icon svg {
+    width: 1.25rem;
+ }
+}
+.sgds-masthead-content .wrapper .banner-icon-inline path {
+  fill: #252525;
+}
+@media screen and (max-width: 1023px) {
+  .sgds-masthead-content .wrapper .banner-icon-inline {
+    width: 0.6rem;
+    height: 0.6rem;
+    margin-bottom: 0.1875rem;
+ }
+}
+.sgds-masthead-content.show {
+  display: block;
 }
 
 a.trusted-websites-link {
