--- a/src/components/Stepper/stepper.css
+++ b/src/components/Stepper/stepper.css
@@ -86,12 +86,12 @@
   border: var(--sgds-border-width-2) solid var(--sgds-default-border-color-transparent);
   border-radius: 50%;
   z-index: 1;
-  color: var(--sgds-default-color-subtle);
+  color: var(--sgds-default-color);
   height: var(--sgds-dimension-32);
   width: var(--sgds-dimension-32);
 }
 
-.stepper .stepper-detail {
+.stepper:not(.vertical) .stepper-detail {
   text-align: center;
   max-width: var(--sgds-dimension-128);
 }
@@ -102,7 +102,7 @@
 }
 
 .stepper .stepper-item:not(.is-active):not(.is-completed) .stepper-detail {
-  color: var(--sgds-default-color-subtle);
+  color: var(--sgds-default-color);
 }
 
 .stepper .stepper-item.is-clickable:hover .stepper-marker {
