--- a/src/components/Textarea/textarea.css
+++ b/src/components/Textarea/textarea.css
@@ -46,10 +46,7 @@ textarea {
   border: var(--sgds-form-border-width-thick) solid var(--sgds-form-border-color-emphasis);
 }
 
-.form-control:focus {
-  outline: 0;
-}
-
+.form-control:not([readonly]):not([disabled]):not(.is-invalid):focus,
 .form-control:not([readonly]):not([disabled]):not(.is-invalid):focus-visible {
   border: var(--sgds-form-border-width-thick) solid var(--sgds-form-border-color-emphasis);
   box-shadow: var(--sgds-form-box-shadow-focus);
