--- a/src/components/Alert/alert-link.css
+++ b/src/components/Alert/alert-link.css
@@ -7,8 +7,9 @@
   color: var(--sgds-alert-color);
   text-decoration-line: underline;
 }
-.alert-link:focus-visible{
-  outline: 0;
-  box-shadow: var(--sgds-dimension-0) var(--sgds-dimension-0) var(--sgds-dimension-0) var(--sgds-dimension-4) var(--sgds-blue-300);
 
+.alert-link:focus,
+.alert-link:focus-visible {
+  outline: 0;
+  box-shadow: var(--sgds-box-shadow-focus);
 }
