--- a/src/components/Textarea/textarea.css
+++ b/src/components/Textarea/textarea.css
@@ -42,12 +42,12 @@ textarea {
   }
 }
 
-.form-control:not([readonly]):not([disabled]):not(.is-invalid):hover {
+.form-control:not([disabled]):not(.is-invalid):hover {
   border: var(--sgds-form-border-width-thick) solid var(--sgds-form-border-color-emphasis);
 }
 
-.form-control:not([readonly]):not([disabled]):not(.is-invalid):focus,
-.form-control:not([readonly]):not([disabled]):not(.is-invalid):focus-visible {
+.form-control:not([disabled]):not(.is-invalid):focus,
+.form-control:not([disabled]):not(.is-invalid):focus-visible {
   border: var(--sgds-form-border-width-thick) solid var(--sgds-form-border-color-emphasis);
   box-shadow: var(--sgds-form-box-shadow-focus);
   outline: 0;
@@ -82,4 +82,8 @@ textarea {
 .textarea-info-container {
   display: flex;
   justify-content: space-between;
+}
+
+.word-count {
+  margin-left: auto;
 }
