style(stepper): update label color for current step when clickable prop is set

--- a/src/components/Stepper/stepper.css
+++ b/src/components/Stepper/stepper.css
@@ -112,8 +112,9 @@
   color: var(--sgds-default-color-on-dark);
 }
 
-.stepper .stepper-item.is-clickable .stepper-detail {
-  color: var(--sgds-primary-color-emphasis);
+.stepper .stepper-item.is-clickable .stepper-detail,
+.stepper.clickable .stepper-item.is-active .stepper-detail {
+  color: var(--sgds-primary-color);
 }
 
 .stepper .stepper-item.is-active .stepper-marker {
